# Stock_Monte_Carlo_Forecaster

./: .gitignore  JOURNAL.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: AI_ASSISTED_WORKFLOW.md  INTERVIEW_NOTES.md  MODEL_NOTES.md
examples/: scenario_config.json
site/: index.html
stock_monte_carlo/: __init__.py  cli.py  data.py  plotting.py  risk.py  simulation.py
tests/: test_risk.py  test_simulation.py
