[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-monte-carlo-forecaster"
version = "0.1.0"
description = "Monte Carlo stock forecasting dashboard and risk toolkit."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "XXStvXX" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.18",
    "scipy>=1.11",
    "streamlit>=1.31",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
stock-forecast = "stock_monte_carlo.cli:main"

[tool.setuptools.packages.find]
include = ["stock_monte_carlo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]